Changed Fitzos references to reach your peak

--- a/index.htm
+++ b/index.htm
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>FitZos.com</title>
-<meta name="fitness socialized" content="FitZos.com">
+<title>reach-your-peak.com</title>
+<meta name="fitness socialized" content="reach-your-peak.comFitZos.com">
 
 <link rel="stylesheet" href="css/style.css">
 <link href='http://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css'>
@@ -14,7 +14,7 @@
 	<div class="container">
   <header>
     <a href="standard.html">
-    <img src="images/logo.png" name="Fitzos.com" alt="Fitzos.com" width="599" height="328"></a>
+    <img src="images/logo.png" name="reach-your-peak.com" alt="reach-your-peak.com" width="599" height="328"></a>
   </header>
 	<section>
 		<form>
