--- a/standard.html
+++ b/standard.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>Welcome</title>
-<meta name="fitness socialized" content="FitZos.com">
+<meta name="fitness socialized" content="reach-your-peak.com">
 <!--[if lt IE 9]>
 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
@@ -16,7 +16,7 @@
 	<div class="container">
 		<header>
 			<a href="#">
-			<img src="images/logo.png" alt="FitZos.com" name="Fitzos.com" width="178" height="99" id="FitZos" style="display:block;" class="logo"/>
+			<img src="images/logo.png" alt="reach-your-peak.com" name="reach-your-peak.com" width="178" height="99" id="FitZos" style="display:block;" class="logo"/>
 			</a>
 		</header>
 		
